--- a/kube/manifests/database/deployment.yaml
+++ b/kube/manifests/database/deployment.yaml
@@ -14,6 +14,10 @@ spec:
     spec:
       containers:
         - name: airbyte-db-container
+          resources:
+            limits:
+              cpu: 2
+              memory: 2Gi
           image: airbyte/db
           env:
             - name: POSTGRES_DB
