--- a/kube/manifests/scheduler/deployment.yaml
+++ b/kube/manifests/scheduler/deployment.yaml
@@ -14,6 +14,10 @@ spec:
     spec:
       containers:
         - name: airbyte-scheduler-container
+          resources:
+            limits:
+              cpu: 2
+              memory: 512Mi
           image: airbyte/scheduler
           env:
             - name: AIRBYTE_VERSION
