--- a/kube/manifests/bootloader/pod.yaml
+++ b/kube/manifests/bootloader/pod.yaml
@@ -6,7 +6,7 @@ spec:
   restartPolicy: Never
   containers:
     - name: airbyte-bootloader-container
-      image: airbyte/bootloader
+      image: airbyte/bootloader:0.35.30-alpha 
       env:
         - name: AIRBYTE_VERSION
           valueFrom:
