--- a/kube/manifests/database/deployment.yaml
+++ b/kube/manifests/database/deployment.yaml
@@ -18,7 +18,7 @@ spec:
             limits:
               cpu: 2
               memory: 2Gi
-          image: airbyte/db
+          image: airbyte/db:0.35.30-alpha 
           env:
             - name: POSTGRES_DB
               value: db-airbyte
