--- a/kube/manifests/scheduler/deployment.yaml
+++ b/kube/manifests/scheduler/deployment.yaml
@@ -18,7 +18,7 @@ spec:
             limits:
               cpu: 2
               memory: 512Mi
-          image: airbyte/scheduler
+          image: airbyte/scheduler:0.35.30-alpha 
           env:
             - name: AIRBYTE_VERSION
               valueFrom:
