--- a/kube/manifests/webapp/deployment.yaml
+++ b/kube/manifests/webapp/deployment.yaml
@@ -18,7 +18,7 @@ spec:
             limits:
               cpu: 1
               memory: 512Mi
-          image: airbyte/webapp
+          image: airbyte/webapp:0.35.30-alpha 
           env:
             - name: AIRBYTE_VERSION
               valueFrom:
