--- a/kube/manifests/pod-sweeper/deployment.yaml
+++ b/kube/manifests/pod-sweeper/deployment.yaml
@@ -15,10 +15,10 @@ spec:
       serviceAccountName: airbyte-admin
       containers:
         - name: airbyte-pod-sweeper
-          resources:
-            limits:
-              cpu: 0.5
-              memory: 128Mi
+          # resources:
+          #   limits:
+          #     cpu: 0.5
+          #     memory: 128Mi
           image: bitnami/kubectl
           imagePullPolicy: IfNotPresent
           env:
