--- a/kube/manifests/airbyte-secrets.yaml
+++ b/kube/manifests/airbyte-secrets.yaml
@@ -9,3 +9,4 @@ data:
   AWS_SECRET_ACCESS_KEY: bWluaW8xMjM=
   STATE_STORAGE_MINIO_ACCESS_KEY: bWluaW8=
   STATE_STORAGE_MINIO_SECRET_ACCESS_KEY: bWluaW8xMjM=
+  GOOGLE_APPLICATION_CREDENTIALS: ''
