add env variables

--- a/kube/manifests/airbyte-env.yaml
+++ b/kube/manifests/airbyte-env.yaml
@@ -50,3 +50,7 @@ data:
   WORKER_ENVIRONMENT: kubernetes
   WORKSPACE_DOCKER_MOUNT: airbyte_workspace
   WORKSPACE_ROOT: /workspace
+  JOB_KUBE_TOLERATIONS: ''
+  JOB_KUBE_NODE_SELECTORS: ''
+  JOB_KUBE_MAIN_CONTAINER_IMAGE_PULL_POLICY: ''
+  CONTAINER_ORCHESTRATOR_ENABLED: ''
