--- a/kube/manifests/airbyte-env.yaml
+++ b/kube/manifests/airbyte-env.yaml
@@ -24,7 +24,7 @@ data:
   FULLSTORY: disabled
   GCS_LOG_BUCKET: ''
   GOOGLE_APPLICATION_CREDENTIALS: ''
-  INTERNAL_API_HOST: 'airbyte-server:8001'
+  INTERNAL_API_HOST: 'airbyte-server-svc:8001'
   IS_DEMO: 'false'
   JOBS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION: 0.29.15.001
   JOB_MAIN_CONTAINER_CPU_LIMIT: ''
