--- a/kube/manifests/airbyte-env.yaml
+++ b/kube/manifests/airbyte-env.yaml
@@ -14,10 +14,10 @@ data:
   CONFIGS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION: 0.35.15.001
   CONFIG_ROOT: /configs
   DATABASE_DB: db-airbyte
-  DATABASE_HOST: airbyte-postgresql
+  DATABASE_HOST: airbyte-db-svc
   DATABASE_PASSWORD: airbyte
   DATABASE_PORT: '5432'
-  DATABASE_URL: 'jdbc:postgresql://airbyte-postgresql:5432/db-airbyte'
+  DATABASE_URL: 'jdbc:postgresql://airbyte-db-svc:5432/airbyte'
   DATABASE_USER: airbyte
   DATA_DOCKER_MOUNT: airbyte_data
   DB_DOCKER_MOUNT: airbyte_db
@@ -35,18 +35,18 @@ data:
   RUN_DATABASE_MIGRATION_ON_STARTUP: 'true'
   S3_LOG_BUCKET: airbyte-dev-logs
   S3_LOG_BUCKET_REGION: ''
-  S3_MINIO_ENDPOINT: 'http://airbyte-minio:9000'
+  S3_MINIO_ENDPOINT: 'http://airbyte-minio-svc:9000'
   S3_PATH_STYLE_ACCESS: 'true'
   STATE_STORAGE_MINIO_ACCESS_KEY: minio
   STATE_STORAGE_MINIO_BUCKET_NAME: airbyte-state-storage
-  STATE_STORAGE_MINIO_ENDPOINT: 'http://airbyte-minio:9000'
+  STATE_STORAGE_MINIO_ENDPOINT: 'http://airbyte-minio-svc:9000'
   STATE_STORAGE_MINIO_SECRET_ACCESS_KEY: minio123
   SUBMITTER_NUM_THREADS: '10'
-  TEMPORAL_HOST: 'airbyte-temporal:7233'
+  TEMPORAL_HOST: 'airbyte-temporal-svc:7233'
   TEMPORAL_WORKER_PORTS: >-
     9001,9002,9003,9004,9005,9006,9007,9008,9009,9010,9011,9012,9013,9014,9015,9016,9017,9018,9019,9020,9021,9022,9023,9024,9025,9026,9027,9028,9029,9030,9031,9032,9033,9034,9035,9036,9037,9038,9039,9040
   TRACKING_STRATEGY: segment
-  WEBAPP_URL: 'http://airbyte-webapp:80'
+  WEBAPP_URL: 'airbyte-webapp-svc:80'
   WORKER_ENVIRONMENT: kubernetes
   WORKSPACE_DOCKER_MOUNT: airbyte_workspace
   WORKSPACE_ROOT: /workspace
