--- a/kube/manifests/airbyte-env.yaml
+++ b/kube/manifests/airbyte-env.yaml
@@ -13,7 +13,7 @@ data:
   AWS_SECRET_ACCESS_KEY: minio123
   CONFIGS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION: 0.35.15.001
   CONFIG_ROOT: /configs
-  DATABASE_DB: db-airbyte
+  DATABASE_DB: airbyte
   DATABASE_HOST: airbyte-db-svc
   DATABASE_PASSWORD: airbyte
   DATABASE_PORT: '5432'
